--- a/peerjs/recv.html
+++ b/peerjs/recv.html
@@ -5,15 +5,29 @@
 		<title>PeerJS recv</title>
 		<style>
 			body { margin: 0; }
+
+      #console {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+      }
+
+      #messages {
+        width: 100%;
+      }
+
+      #messageInput {
+        width: 100%;
+      }
+
 		</style>
 	</head>
 	<body>
-    <div>
-      <span id="receiver-id"></span>
-      <span id="status"></span>
+    <div id="console">
+      <textarea id="messages" rows="5" readonly></textarea>
+      <input type="text" id="messageInput" autofocus="true" />
     </div>
-    <input type="text" id="sendMessageBox" placeholder="Enter a message..." autofocus="true" />
-    <div class="message" id="message"></div>
+
 		<script src="js/peerjs.min.js"></script>
 		<script type="module" src="js/recv.js"></script>
 	</body>
