--- a/svg_peerjs/demo.html
+++ b/svg_peerjs/demo.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>SVG PeerJS recv</title>
+		<title>SVG PeerJS</title>
     <link rel="stylesheet" type="text/css" href="css/demo.css"/>
 	</head>
 	<body>
@@ -27,6 +27,6 @@
     </div>
 
 		<script src="js/peerjs.min.js"></script>
-		<script type="module" src="js/recv.js"></script>
+		<script type="module" src="js/demo.js"></script>
 	</body>
 </html>
