Load image assets first, then create pieces from them. Added faces array.

--- a/svg_peerjs/demo.html
+++ b/svg_peerjs/demo.html
@@ -26,6 +26,9 @@
       <input type="text" id="messageInput" autofocus="true" />
     </div>
 
+    <svg id="assets">
+    </svg>
+
 		<script src="js/peerjs.min.js"></script>
 		<script type="module" src="js/demo.js"></script>
 	</body>
